ui alignment fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -299,7 +299,6 @@ body {
   overflow-x: clip;
   min-height: 100%;
   width: 100%;
-  padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
 }
 
 img,
